# SpoutRelay

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README-ja.md  README.md  THIRD_PARTY_LICENSES.md  auto.crt  auto.key  toolchain-mingw.cmake
.claude/commands/: run-tests.md
.claude/skills/run-tests/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
config/: config.example.json  config.test.json
docs/: architecture.md  build.md  configuration.md  metrics.md  state-machine.md  testing.md  troubleshooting.md
e2e-test/: .gitignore  cli-tests.ps1  encoder-config-tests.ps1  mediamtx.yml  monkey-tests.ps1  multi-instance-tests.ps1  run-new-tests.ps1  run-tests.ps1  send-ctrlbreak-helper.ps1  state-files-tests.ps1
e2e-test/config/: config.json  config_fatal.json  config_libopenh264.json  config_placeholder.json
src/: main.cpp
src/app/: state_machine.cpp  state_machine.hpp  supervisor.cpp  supervisor.hpp  supervisor_logic.hpp
src/capture/: frame_pump.cpp  frame_pump.hpp
src/common/: errors.hpp  time_utils.hpp  types.hpp
src/config/: config_loader.cpp  config_loader.hpp
src/encoder/: encoder_controller.cpp  encoder_controller.hpp
src/logging/: log_sink.cpp  log_sink.hpp
src/metrics/: metrics_store.cpp  metrics_store.hpp
src/placeholder/: placeholder_renderer.cpp  placeholder_renderer.hpp
src/rtsp/: rtsp_publisher_client.cpp  rtsp_publisher_client.hpp
src/spout/: spout_monitor.cpp  spout_monitor.hpp
tests/: CMakeLists.txt
tests/spout_res_changer/: main.cpp
tests/spout_static_sender/: main.cpp
tests/spout_test_sender/: main.cpp
tests/unit/: test_backoff.cpp  test_config_loader.cpp  test_frame_pump.cpp  test_log_sink.cpp  test_metrics_store.cpp  test_placeholder_renderer.cpp  test_state_machine.cpp  test_supervisor_logic.cpp  test_utils.hpp
